--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -11,11 +11,11 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-        - uses: imjasonh/setup-crane@v0.3
+        - uses: imjasonh/setup-crane@00c9e93efa4e1138c9a7a5c594acd6c75a2fbf0c # v0.3
           name: Setup crane 🪿 ♥️ 🏗️
 
         - name: Install Cosign 🪿 ♥️ ·∫·
-          uses: sigstore/cosign-installer@v3.2.0
+          uses: sigstore/cosign-installer@1fc5bd396d372bee37d608f955b336615edf79c8 # v3.2.0
 
         - uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v2.2.0
           with:
